--- a/elementos basicos/contenderores.html
+++ b/elementos basicos/contenderores.html
@@ -10,13 +10,13 @@
 
     <h1>Contenedores (div)</h1>
     
-    <div id="contenedor-prinicipal"  class="" >
+    <div id="contenedor-prinicipal"  class="container-grupo-descuento" >
         <p>Lorem ipsum dolor sit amet.</p>
         <button>Comprar</button>
         <div>Agregar al carrito</div>
     </div>
 
-    <div id="contenedor-secdunario">
+    <div id="contenedor-secdunario" class="container-grupo-descuento">
         <button>Escribenos por whatsappp</button>
         <button>Escribenos por whatsappp</button>
         <button>Escribenos por whatsappp</button>
