--- a/elementos-multimedia/iframes.html
+++ b/elementos-multimedia/iframes.html
@@ -8,7 +8,25 @@
 <body>
 
 
-    <h1>Iframes</h1>
+    <h1>Iframe</h1>
+
+    <h2>Insertando recuros de teceros</h2>
+
+
+
+    <!-- <iframe src="https://www.google.com/maps/place/International+Airport+Jorge+Ch%C3%A1vez/@-12.0230443,-77.1110064,16z/data=!4m6!3m5!1s0x9105cc3d52f51e01:0x1f75ae97fb12652c!8m2!3d-12.0230437!4d-77.1079976!16zL20vMHB2Ync?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D" width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+    
+
+
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/aN4unZC9KtU?si=bNZ9ztPxkFqOgosO" title="YouTube video player" frameborder="0" allow="mic; accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+
+    <!-- <iframe width="100%" height="500px" src="https://tmpfiles.org/dl/18046073/15.elprincipitopdfdrive.pdf" frameborder="0"></iframe> -->
+
+
+    <iframe width="100%" height="700px"  src="https://products.aspose.app/words/ngviewer/importer/aspose-cache/497ea26d-8aa9-4558-98db-fa0471cac8a1?name=Introduccion-al-desarrollo-web-HTML-y-CSS.docx" frameborder="0"></iframe>
+
+
     
 </body>
 </html>
