--- a/MODULO CSS/position.html
+++ b/MODULO CSS/position.html
@@ -30,7 +30,7 @@
         </div>
 
         <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVRnvNpuigcjJD7qbH3ltEdh6Q1AGyAXDRxA&s" alt="">
+            <img class="ovni-0" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVRnvNpuigcjJD7qbH3ltEdh6Q1AGyAXDRxA&s" alt="">
         </div>
 
 
@@ -48,9 +48,21 @@
         </div>
 
 
-        <button>
+        <a target="_blank" href="https://wa.link/hl63yu">
+            <button class="btn-wasap" >
+                <i class="bi bi-whatsapp"></i>
+            </button>
+        </a>
+
+<!-- 
+        <button class="btn-wasap" onclick="window.location = https://wa.link/hl63yu" >
             <i class="bi bi-whatsapp"></i>
-        </button>
+        </button> -->
+
+
+
+     
+ 
 
     </main>
 
