--- a/JAVASCRIPT/index.html
+++ b/JAVASCRIPT/index.html
@@ -14,7 +14,7 @@
 
 
     <h1>
-        Hello World JS!
+        Hello World JS!!!
     </h1>
 
 
@@ -28,7 +28,9 @@
 
     <!-- <script src="assets/js/index.js"></script>  -->
     <!-- <script src="assets/js/tipos-datos.js"></script>  -->
-    <script src="assets/js/operadores-logicos.js"></script> 
+    <!-- <script src="assets/js/operadores-logicos.js"></script>  -->
+    <!-- <script src="estructura-datos/condiciones.js"></script>  -->
+    <script src="estructura-datos/iteradores.js"></script> 
     
     
 </body>
