--- a/JAVASCRIPT/index.html
+++ b/JAVASCRIPT/index.html
@@ -18,11 +18,11 @@
     </h1>
 
 
-
+<!-- 
     <script>
         console.log("hello world!");
         console.log("welcome fullstack!");
-    </script>
+    </script> -->
 
 
 
@@ -30,7 +30,10 @@
     <!-- <script src="assets/js/tipos-datos.js"></script>  -->
     <!-- <script src="assets/js/operadores-logicos.js"></script>  -->
     <!-- <script src="estructura-datos/condiciones.js"></script>  -->
-    <script src="estructura-datos/iteradores.js"></script> 
+    <!-- <script src="estructura-datos/iteradores.js"></script>  -->
+    <!-- <script src="estructura-datos/funciones.js"></script>  -->
+    <!-- <script src="estructura-datos/tipos_funciones.js"></script>  -->
+    <script src="estructura-datos/json.js"></script> 
     
     
 </body>
